# fortunes-kaamelott

./: .gitignore  Makefile.in  README  configure  configure.ac
